--- a/src/scss/block/buttom.scss
+++ b/src/scss/block/buttom.scss
@@ -1,11 +1,25 @@
+@use "../mixins/to-desktop" as *;
+@use "../mixins/desktop" as *;
+
 .buttom{
-    box-shadow: 0px 3px 7px -1px var(--Grayish-Blue);
+    box-shadow: 0px 3px 8px -3px var(--Grayish-Blue);
+    font-size: 11px;
+
+    @include desktop {
+        font-size: 14px;
+    }
+
     &-white{
         color: var(--Very-Dark-Cyan);
-        font-size: 11px;
         background-color: var(--white);
-        border-radius: 20px;
+        border-radius: 30px;
         padding: 3px 20px;
+        
+        @include desktop {
+            padding: 14px 65px;
+            font-weight: 700;
+            
+        }
         
     }
     
@@ -13,19 +27,45 @@
         display: block;
         color: var(--white);
         padding: 13px 60px;
-        font-size: 11px;
         background-color: var(--Pink);
-        border-radius: 20px;
-        width: 80%;
+        border-radius: 50px;
         font-weight: 700;
-        margin-left: auto;
-        margin-right: auto;
+
+
         text-align: center;
+
+        @include to-desktop {
+            margin-left: auto;
+            margin-right: auto;
+
+        }
+        
+        @include desktop {
+            width: 80%;
+            
+        }
+        
+        @include desktop {
+            padding: 18px 55px;
+            width: 280px;
+     
+        }
         
         &-aside{
             font-size: 10px;
             width:66%;
             margin-bottom: 40px;
+            margin-left: auto;
+            margin-right: auto;
+            
+            @include desktop {
+                font-size: 1.2rem;
+                width:400PX;
+                padding-top: 25px;
+                padding-bottom: 25px;
+
+            }
+           
         }
 
     }
