--- a/src/scss/block/header.scss
+++ b/src/scss/block/header.scss
@@ -1,31 +1,74 @@
+@use "../mixins/desktop" as *;
+@use "../mixins/to-desktop" as *;
+
 .header{
     background-color:var(--Very-Pale-Cyan);
-    background-image: url(../assets/images/bg-hero-mobile.svg);
     padding: 25px 15px 20px ;
-    text-align: center;
     margin-bottom: 50px;
+
+    
+    @include to-desktop {
+        background-image: url(../assets/images/bg-hero-mobile.svg);
+        text-align: center;
+    }
+    
+    @include desktop {
+        background-image: url(../assets/images/bg-hero-desktop.svg);
+    }
+
+    &__banner{
+        
+        @include desktop {
+            display:flex;
+            max-width: 1275px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
 
     &__top-bar{
         display:flex;
         justify-content: space-between;
         margin-bottom: 80px;
 
+        @include desktop {
+            max-width: 1275px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
         & img{
             width:100px;
             align-self: flex-start;
-        }
+            
+            @include desktop {
+                width: 180px;
+            }
+        } 
     }
 
     &__info{
-        padding-left:20px ;
-        padding-right: 20px;
-        margin-bottom: 60px;
+        
+        @include to-desktop {
+            margin-bottom: 60px;
+            padding-left:20px ;
+            padding-right: 20px;
+        }
+
+        @include desktop {
+            align-self:center;
+        }
     }
     
     &__title{
         font-size: 1.5rem;
         font-family: 'Poppins', sans-serif;
         margin-bottom: 25px;
+        
+        @include desktop {
+            font-size: 2.5rem;
+            padding-right: 60px;
+        }
     }
     
     &__text{
@@ -33,9 +76,18 @@
         font-size: 1rem;
         font-weight: lighter;
         margin-bottom: 30px;
+
+        @include desktop {
+            font-size: 1.2rem;
+            padding-right: 50px;
+        }
     }
 
     &__img{
-        width: 310px;
+        max-width: 100%;
+
+        @include desktop {
+            max-width: 680px;
+        }
     }
 }
